Deploy AI Tools application with CODM and Business features

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-﻿# Copy to .env locally and fill in your real key (DO NOT COMMIT .env)
-OPENAI_API_KEY=sk-REPLACE_WITH_YOUR_KEY
+﻿OPENAI_API_KEY=your_key_here
 PORT=3000
 DAILY_LIMIT_PER_IP=200
