--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "ai-tools-site",
   "version": "1.0.0",
   "description": "AI Tools for CODM Tips and Business Replies",
-  "main": "server/server.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server/server.js",
-    "dev": "nodemon server/server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "node-fetch": "^3.4.1"
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
